remove insertIntoOrganisationRefreshQueueForLastUpdated to use the existing identical upsertToOrganisationRefreshQueue